fixed auto table stretch in the tables

--- a/src/main/webapp/css/hrdp/hrdpStyling.css
+++ b/src/main/webapp/css/hrdp/hrdpStyling.css
@@ -66,6 +66,7 @@ p,li, a.here, span{
     /*justify-content: space-between;*/
     justify-content: space-around;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 /* The pop up window styling (background) */
